<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoodActivity">

    <TextView
        android:id="@+id/moodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#089F82"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text="@string/mood"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/moodPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:text="How often do you feel sad?"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal">

        <RadioButton
            android:id="@+id/mood0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/mood_0"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/mood1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/mood_1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/mood2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/mood_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/mood3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/mood_3"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/submitMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="#2A810A"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/next_page_button"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>