<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConcentrationActivity">

    <TextView
        android:id="@+id/concenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#089F82"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingVertical="15dp"
        android:text="@string/concentration"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/concenPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:text="Concentration/Decision-making"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal">

        <RadioButton
            android:id="@+id/concen0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/concen_0"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/concen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/concen_1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/concen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/concen_2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/concen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="actionClick"
            android:text="@string/concen_3"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/submitConcen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="#2A810A"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/next_page_button"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>